--- a/pmdm/AndroidStudioProjects/TheLordOfTheRingsCharacterSelector/app/src/main/res/layout/activity_character_selector.xml
+++ b/pmdm/AndroidStudioProjects/TheLordOfTheRingsCharacterSelector/app/src/main/res/layout/activity_character_selector.xml
@@ -6,4 +6,51 @@
     android:layout_height="match_parent"
     tools:context=".CharacterSelectorActivity">
 
+    <ImageView
+        android:id="@+id/ivFrodo"
+        android:layout_width="150dp"
+        android:layout_height="125dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.188"
+        app:srcCompat="@drawable/frodo" />
+
+    <ImageView
+        android:id="@+id/ivGandalf"
+        android:layout_width="150dp"
+        android:layout_height="125dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/gandalf" />
+
+    <ImageView
+        android:id="@+id/ivLegolas"
+        android:layout_width="150dp"
+        android:layout_height="125dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.813"
+        app:srcCompat="@drawable/legolas" />
+
+    <ImageView
+        android:id="@+id/ivBack"
+        android:layout_width="80dp"
+        android:layout_height="67dp"
+        android:rotation="180"
+        app:layout_constraintBottom_toTopOf="@+id/ivSword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.048"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.34"
+        app:srcCompat="@drawable/backbow" />
 </androidx.constraintlayout.widget.ConstraintLayout>
