--- a/pmdm/AndroidStudioProjects/FragmentsChars/app/src/main/res/layout/fragment_character_selection.xml
+++ b/pmdm/AndroidStudioProjects/FragmentsChars/app/src/main/res/layout/fragment_character_selection.xml
@@ -9,39 +9,34 @@
 
     <ImageView
         android:id="@+id/iv1"
-        android:layout_width="121dp"
-        android:layout_height="64dp"
-        android:layout_marginBottom="76dp"
-        app:layout_constraintBottom_toTopOf="@+id/iv2"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.988"
-        app:srcCompat="@android:drawable/presence_audio_busy"
-        tools:src="@android:drawable/presence_audio_busy" />
-
-    <ImageView
-        android:id="@+id/iv3"
-        android:layout_width="385dp"
-        android:layout_height="53dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:src="@drawable/frodo" />
+        app:srcCompat="@drawable/frodo" />
 
     <ImageView
         android:id="@+id/iv2"
-        android:layout_width="374dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="80dp"
-        app:layout_constraintBottom_toTopOf="@+id/iv3"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv1"
+        app:srcCompat="@drawable/gandalf" />
+
+    <ImageView
+        android:id="@+id/iv3"
+        android:layout_width="411dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.996"
-        app:srcCompat="@android:drawable/alert_dark_frame"
-        tools:src="@drawable/frodo" />
+        app:layout_constraintTop_toBottomOf="@+id/iv2"
+        app:srcCompat="@drawable/legolas" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
