--- a/pmdm/AndroidStudioProjects/RecyclerViewsActivity/app/src/main/res/layout/adapter_layout.xml
+++ b/pmdm/AndroidStudioProjects/RecyclerViewsActivity/app/src/main/res/layout/adapter_layout.xml
@@ -2,13 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tvNombre"
-        android:layout_width="170dp"
-        android:layout_height="47dp"
+        android:layout_width="203dp"
+        android:layout_height="63dp"
         android:layout_marginTop="40dp"
         android:gravity="center"
         android:text="TextView"
@@ -24,7 +24,8 @@
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvNombre"
-        app:layout_constraintVertical_bias="0.48" />
+        app:layout_constraintVertical_bias="0.044" />
 </androidx.constraintlayout.widget.ConstraintLayout>
